基于Appium的App自动化测试框架完美版

--- a/TestOutput/ExtentReport/index.html
+++ b/TestOutput/ExtentReport/index.html
@@ -14,7 +14,7 @@
 	
 		<link href='https://cdn.rawgit.com/anshooarora/extentreports-java/9fa70d0ed9c34a8ed445ceee3494d3d7de7f8918/dist/css/extent.css' type='text/css' rel='stylesheet' />
 	
-	<title>即有钱包APP测试报告</title>
+	<title>Appium自动化测试报告</title>
 
 	<style type='text/css'>
 		.node.level-1  ul{ display:none;} .node.level-1.active ul{display:block;}
@@ -47,7 +47,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Nov 1, 2018 10:29:34 AM</span>
+				<span class='label suite-start-time'>Nov 1, 2018 2:15:50 PM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.3</span>
@@ -167,14 +167,14 @@
 				<li class='test displayed active has-leaf fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>微信登录流程</span>
-						<span class='test-time'>Nov 1, 2018 10:29:34 AM</span>
+						<span class='test-time'>Nov 1, 2018 2:15:50 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 1, 2018 10:29:34 AM</span>
-	<span class='label end-time'>Nov 1, 2018 10:31:11 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 1m 37s+226ms</span>
+	<span class='label start-time'>Nov 1, 2018 2:15:50 PM</span>
+	<span class='label end-time'>Nov 1, 2018 2:17:32 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 42s+783ms</span>
 </div>
 	<div class='test-desc'>Pass: 1 ; Fail: 1 ; Skip: 0 ; </div>
 	<div class='test-attributes'>
@@ -188,8 +188,8 @@
 				<li class='node level-1 leaf fail' status='fail' test-id='2'>
 					<div class='collapsible-header'>
 						<div class='node-name'>case1</div>						
-						<span class='node-time'>Nov 1, 2018 10:30:40 AM</span>
-						<span class='node-duration'>0h 0m 31s+595ms</span>
+						<span class='node-time'>Nov 1, 2018 2:17:02 PM</span>
+						<span class='node-duration'>0h 0m 30s+731ms</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 						<div class='collapsible-body'>
@@ -209,7 +209,7 @@
 										<tbody>
 												<tr class='log' status='fail'>
 													<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-													<td class='timestamp'>10:31:12 AM</td>
+													<td class='timestamp'>2:17:33 PM</td>
 													<td class='step-details'><pre>java.lang.reflect.InvocationTargetException
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
@@ -247,8 +247,8 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
 				<li class='node level-1 leaf pass' status='pass' test-id='3'>
 					<div class='collapsible-header'>
 						<div class='node-name'>case2</div>						
-						<span class='node-time'>Nov 1, 2018 10:30:49 AM</span>
-						<span class='node-duration'>0h 0m 22s+686ms</span>
+						<span class='node-time'>Nov 1, 2018 2:17:11 PM</span>
+						<span class='node-duration'>0h 0m 21s+747ms</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 						<div class='collapsible-body'>
@@ -268,12 +268,12 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
 										<tbody>
 												<tr class='log' status='debug'>
 													<td class='status debug' title='debug' alt='debug'><i class='material-icons'>low_priority</i></td>
-													<td class='timestamp'>10:31:12 AM</td>
+													<td class='timestamp'>2:17:33 PM</td>
 													<td class='step-details'>验证在登录界面，输入正确的手机号和密码，点击登录按钮后，可以正常登录成功，并跳转至首页主界面</td>
 												</tr>
 												<tr class='log' status='pass'>
 													<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-													<td class='timestamp'>10:31:12 AM</td>
+													<td class='timestamp'>2:17:33 PM</td>
 													<td class='step-details'>Test passed</td>
 												</tr>
 										</tbody>
@@ -359,17 +359,17 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
 								</thead>
 								<tbody>
 									<tr>
-										<td>Nov 1, 2018 10:29:34 AM</td>
+										<td>Nov 1, 2018 2:15:50 PM</td>
 										<td class='linked' test-id='1'>Appium测试报告</td>
 										<td><span class='test-status fail'>fail</span></td>
 									</tr>
 									<tr>
-										<td>Nov 1, 2018 10:30:40 AM</td>
+										<td>Nov 1, 2018 2:17:02 PM</td>
 										<td class='linked' test-id='2'>Appium测试报告.case1</td>
 										<td><span class='test-status fail'>fail</span></td>
 									</tr>
 									<tr>
-										<td>Nov 1, 2018 10:30:49 AM</td>
+										<td>Nov 1, 2018 2:17:11 PM</td>
 										<td class='linked' test-id='3'>Appium测试报告.case2</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -404,17 +404,17 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
 								</thead>
 								<tbody>
 									<tr>
-										<td>Nov 1, 2018 10:29:34 AM</td>
+										<td>Nov 1, 2018 2:15:50 PM</td>
 										<td class='linked' test-id='1'>Appium测试报告</td>
 										<td><span class='test-status fail'>fail</span></td>
 									</tr>
 									<tr>
-										<td>Nov 1, 2018 10:30:40 AM</td>
+										<td>Nov 1, 2018 2:17:02 PM</td>
 										<td class='linked' test-id='2'>Appium测试报告.case1</td>
 										<td><span class='test-status fail'>fail</span></td>
 									</tr>
 									<tr>
-										<td>Nov 1, 2018 10:30:49 AM</td>
+										<td>Nov 1, 2018 2:17:11 PM</td>
 										<td class='linked' test-id='3'>Appium测试报告.case2</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -476,7 +476,7 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
 								</thead>
 								<tbody>
 									<tr>
-										<td>Nov 1, 2018 10:30:40 AM</td>
+										<td>Nov 1, 2018 2:17:02 PM</td>
 										<td class='linked' test-id='2'>Appium测试报告.case1</td>
 										<td><pre><pre>java.lang.reflect.InvocationTargetException
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
@@ -539,19 +539,19 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Nov 1, 2018 10:29:34 AM</div>
+					<div class='panel-lead'>Nov 1, 2018 2:15:50 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Nov 1, 2018 10:31:12 AM</div>
+			 		<div class='panel-lead'>Nov 1, 2018 2:17:33 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>97,478ms</div>
+					<div class='panel-lead'>102,936ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
