--- a/TestOutput/TestngReport/index.html
+++ b/TestOutput/TestngReport/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">2 suites, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Appium测试报告">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -130,6 +130,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
+        <div panel-name="suite-Suite" class="panel Suite">
+        </div> <!-- panel Suite -->
         <div panel-name="suite-Appium测试报告" class="panel Appium测试报告">
           <div class="suite-Appium测试报告-class-failed">
             <div class="main-panel-header rounded-window-top">
@@ -188,6 +190,25 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Appium测试报告-class-passed -->
         </div> <!-- panel Appium测试报告 -->
+        <div panel-name="test-xml-Suite" class="panel">
+          <div class="main-panel-header rounded-window-top">
+            <span class="header-content">D:\King\EclipseFX\Appium\src\test\java\TestReportXml\ExtentReport.xml</span>
+          </div> <!-- main-panel-header rounded-window-top -->
+          <div class="main-panel-content rounded-window-bottom">
+            <pre>
+&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
+&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
+&lt;suite name=&quot;Suite&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;AutomationTestSystem.Service.ExtentReportGenerateService&quot;/&gt;
+  &lt;/listeners&gt;
+  &lt;suite-files&gt;
+    &lt;suite-file path=&quot;TestngReport.xml&quot;/&gt;
+  &lt;/suite-files&gt;
+&lt;/suite&gt; &lt;!-- Suite --&gt;
+            </pre>
+          </div> <!-- main-panel-content rounded-window-bottom -->
+        </div> <!-- panel -->
         <div panel-name="test-xml-Appium测试报告" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">D:\King\EclipseFX\Appium\src\test\java\TestReportXml\TestngReport.xml</span>
@@ -212,19 +233,17 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
       &lt;/class&gt; &lt;!-- TestCases.WeChatLogin --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- 微信登录流程 --&gt;
-  &lt;test name=&quot;微信登录流程(failed)&quot;&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;TestCases.WeChatLogin&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;case1&quot;/&gt;
-          &lt;include name=&quot;stup&quot;/&gt;
-          &lt;include name=&quot;TearDown&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- TestCases.WeChatLogin --&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- 微信登录流程(failed) --&gt;
 &lt;/suite&gt; &lt;!-- Appium测试报告 --&gt;
             </pre>
+          </div> <!-- main-panel-content rounded-window-bottom -->
+        </div> <!-- panel -->
+        <div panel-name="testlist-Suite" class="panel">
+          <div class="main-panel-header rounded-window-top">
+            <span class="header-content">Tests for Suite</span>
+          </div> <!-- main-panel-header rounded-window-top -->
+          <div class="main-panel-content rounded-window-bottom">
+            <ul>
+            </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="testlist-Appium测试报告" class="panel">
@@ -236,10 +255,14 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
               <li>
                 <span class="test-name">微信登录流程 (1 class)</span>
               </li>
-              <li>
-                <span class="test-name">微信登录流程(failed) (1 class)</span>
-              </li>
             </ul>
+          </div> <!-- main-panel-content rounded-window-bottom -->
+        </div> <!-- panel -->
+        <div panel-name="group-Suite" class="panel">
+          <div class="main-panel-header rounded-window-top">
+            <span class="header-content">Groups for Suite</span>
+          </div> <!-- main-panel-header rounded-window-top -->
+          <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="group-Appium测试报告" class="panel">
@@ -247,6 +270,30 @@ Caused by: java.lang.AssertionError: 进入登录界面失败(实际结果和预
             <span class="header-content">Groups for Appium测试报告</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+          </div> <!-- main-panel-content rounded-window-bottom -->
+        </div> <!-- panel -->
+        <div panel-name="times-Suite" class="panel">
+          <div class="main-panel-header rounded-window-top">
+            <span class="header-content">Times for Suite</span>
+          </div> <!-- main-panel-header rounded-window-top -->
+          <div class="main-panel-content rounded-window-bottom">
+            <div class="times-div">
+              <script type="text/javascript">
+suiteTableInitFunctions.push('tableData_Suite');
+function tableData_Suite() {
+var data = new google.visualization.DataTable();
+data.addColumn('number', 'Number');
+data.addColumn('string', 'Method');
+data.addColumn('string', 'Class');
+data.addColumn('number', 'Time (ms)');
+data.addRows(0);
+window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
+return data;
+}
+              </script>
+              <div id="times-div-Suite">
+              </div> <!-- times-div-Suite -->
+            </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Appium测试报告" class="panel">
@@ -267,19 +314,26 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'case2')
 data.setCell(0, 2, 'TestCases.WeChatLogin')
-data.setCell(0, 3, 20373);
+data.setCell(0, 3, 19741);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'case1')
 data.setCell(1, 2, 'TestCases.WeChatLogin')
-data.setCell(1, 3, 8628);
+data.setCell(1, 3, 8991);
 window.suiteTableData['Appium测试报告']= { tableData: data, tableDiv: 'times-div-Appium测试报告'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Appium测试报告">
               </div> <!-- times-div-Appium测试报告 -->
             </div> <!-- times-div -->
+          </div> <!-- main-panel-content rounded-window-bottom -->
+        </div> <!-- panel -->
+        <div panel-name="reporter-Suite" class="panel">
+          <div class="main-panel-header rounded-window-top">
+            <span class="header-content">Reporter output for Suite</span>
+          </div> <!-- main-panel-header rounded-window-top -->
+          <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="reporter-Appium测试报告" class="panel">
@@ -295,9 +349,23 @@ return data;
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
+        <div panel-name="ignored-methods-Suite" class="panel">
+          <div class="main-panel-header rounded-window-top">
+            <span class="header-content">0 ignored methods</span>
+          </div> <!-- main-panel-header rounded-window-top -->
+          <div class="main-panel-content rounded-window-bottom">
+          </div> <!-- main-panel-content rounded-window-bottom -->
+        </div> <!-- panel -->
         <div panel-name="ignored-methods-Appium测试报告" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
+          </div> <!-- main-panel-header rounded-window-top -->
+          <div class="main-panel-content rounded-window-bottom">
+          </div> <!-- main-panel-content rounded-window-bottom -->
+        </div> <!-- panel -->
+        <div panel-name="chronological-Suite" class="panel">
+          <div class="main-panel-header rounded-window-top">
+            <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -317,15 +385,15 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">case1</span>
-                <span class="method-start">66324 ms</span>
+                <span class="method-start">72195 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">case2</span>
-                <span class="method-start">74956 ms</span>
+                <span class="method-start">81186 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">95330 ms</span>
+                <span class="method-start">100927 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
