--- a/TestOutput/TestngReport/old/Appium测试报告/methods-alphabetical.html
+++ b/TestOutput/TestngReport/old/Appium测试报告/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Appium测试报告</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85bc9a">  <td>18/11/01 10:35:09</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;WeChatLogin.TearDown()[pri:0, instance:TestCases.WeChatLogin@34c4973]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1800890735</td>   <td></td> </tr>
-<tr bgcolor="85bc9a">  <td>18/11/01 10:34:40</td>   <td>-29007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WeChatLogin.case1()[pri:0, instance:TestCases.WeChatLogin@34c4973]">case1</td> 
-  <td>main@1800890735</td>   <td></td> </tr>
-<tr bgcolor="85bc9a">  <td>18/11/01 10:34:48</td>   <td>-20375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WeChatLogin.case2()[pri:0, instance:TestCases.WeChatLogin@34c4973]">case2</td> 
-  <td>main@1800890735</td>   <td></td> </tr>
-<tr bgcolor="85bc9a">  <td>18/11/01 10:33:33</td>   <td>-95329</td> <td>&nbsp;</td><td title="&gt;&gt;WeChatLogin.stup()[pri:0, instance:TestCases.WeChatLogin@34c4973]">&gt;&gt;stup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1800890735</td>   <td></td> </tr>
+<tr bgcolor="6ee7cb">  <td>18/11/01 14:17:31</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;WeChatLogin.TearDown()[pri:0, instance:TestCases.WeChatLogin@73f792cf]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1632392469</td>   <td></td> </tr>
+<tr bgcolor="6ee7cb">  <td>18/11/01 14:17:02</td>   <td>-28733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WeChatLogin.case1()[pri:0, instance:TestCases.WeChatLogin@73f792cf]">case1</td> 
+  <td>main@1632392469</td>   <td></td> </tr>
+<tr bgcolor="6ee7cb">  <td>18/11/01 14:17:11</td>   <td>-19742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WeChatLogin.case2()[pri:0, instance:TestCases.WeChatLogin@73f792cf]">case2</td> 
+  <td>main@1632392469</td>   <td></td> </tr>
+<tr bgcolor="6ee7cb">  <td>18/11/01 14:15:50</td>   <td>-100926</td> <td>&nbsp;</td><td title="&gt;&gt;WeChatLogin.stup()[pri:0, instance:TestCases.WeChatLogin@73f792cf]">&gt;&gt;stup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1632392469</td>   <td></td> </tr>
 </table>
