基于Appium的App自动化测试框架完美版

--- a/TestOutput/TestngReport/html/output.html
+++ b/TestOutput/TestngReport/html/output.html
@@ -15,7 +15,7 @@
   </p>
 
   <div id="log">
-                  验证在登录界面，输入正确的手机号和密码，点击登录按钮后，可以正常登录成功，并跳转至首页主界面<br />
+                  验证在登录界面，输入错误的手机号和密码，点击登录按钮后，无法正常登录成功，且对应提示信息显示正确<br />
             </div>
 
 </body>
